# SeaBattleGame

./: .gitignore  Lb1.docx
Reports/: Lb2.docx  Lb3.docx  Lb4.docx
SeaBattleGame/: CMakeLists.txt  build.sh
SeaBattleGame/include/: AbilityManager.h  Battlefield.h  Battleship.h  CastableOnMap.h  CastableOnShipManager.h  DoubleDamage.h  Scanner.h  ShipManager.h
SeaBattleGame/include/Abilities/: AbilityFactory.h  AbilityManager.h  AbilityResult.h  AbilityResultHandler.h  AbilitySettingsVisitor.h  AbilityType.h  CastableOnMap.h  DoubleDamage.h  DoubleDamageSettings.h  IAbility.h  IAbilitySettings.h  IVisitor.h  Scanner.h  ScannerResult.h  ScannerSettings.h  Shelling.h  ShellingSettings.h
SeaBattleGame/include/Battlefield/: Battlefield.h  Coords.h
SeaBattleGame/include/Battleship/: Battleship.h  ShipManager.h
SeaBattleGame/include/Commands/: AttackCommand.h  DoubleDamageCommand.h  ICommand.h  LoadCommand.h  PlaceShipCommand.h  SaveCommand.h  ScannerCommand.h  ShellingCommand.h
SeaBattleGame/include/ControlsIO/: BotController.h  CLIInput.h  ConcreteGameDisplayer.hpp  ConsoleDisplayer.h  GameController.h  GameObserver.h  IGameDisplayer.h  InputHandler.hpp  ParticipantController.h  PlayerController.h  PlayerController.hpp
SeaBattleGame/include/Exceptions/: NoAbilityException.h  OutOfRangeAttackException.h  ShipPlacementException.h
SeaBattleGame/include/Game/: AttackState.h  Game.h  GameController.h  GameInfo.h  GameSettings.h  GameState.h  ShipPosState.h
SeaBattleGame/include/GameSaver/: FileHandler.h  GameSaver.h
SeaBattleGame/include/Participant/: Bot.h  Participant.h  Player.h
SeaBattleGame/sources/: AbilityManager.cpp  Battlefield.cpp  BattlefieldCell.cpp  Battleship.cpp  CMakeLists.txt  CastableOnMap.cpp  CastableOnShipManager.cpp  DoubleDamage.cpp  Scanner.cpp  Shelling.cpp  ShipManager.cpp  main.cpp
SeaBattleGame/sources/Abilities/: AbilityFactory.cpp  AbilityManager.cpp  AbilityResultHandler.cpp  AbilitySettingsVisitor.cpp  CMakeLists.txt  CastableOnShipManager.cpp  DoubleDamage.cpp  DoubleDamageSettings.cpp  Scanner.cpp  ScannerResult.cpp  ScannerSettings.cpp  Shelling.cpp  ShellingSettings.cpp
SeaBattleGame/sources/Battlefield/: Battlefield.cpp  BattlefieldCell.cpp  CMakeLists.txt  Coords.cpp
SeaBattleGame/sources/Battleship/: Battleship.cpp  CMakeLists.txt  ShipManager.cpp
SeaBattleGame/sources/Commands/: AttackCommand.cpp  CMakeLists.txt  DoubleDamageCommand.cpp  LoadCommand.cpp  PlaceShipCommand.cpp  SaveCommand.cpp  ScannerCommand.cpp  ShellingCommand.cpp
SeaBattleGame/sources/ControlsIO/: BotController.cpp  CLIInput.cpp  CMakeLists.txt  ConsoleDisplayer.cpp  GameController.cpp  GameObserver.cpp  InputHandler.cpp  ParticipantController.cpp  PlayerController.cpp
SeaBattleGame/sources/Exceptions/: CMakeLists.txt  NoAbilityException.cpp  OutOfRangeAttackException.cpp  ShipPlacementException.cpp
SeaBattleGame/sources/Game/: AttackState.cpp  CMakeLists.txt  Game.cpp  GameController.cpp  GameState.cpp  ShipPosState.cpp
SeaBattleGame/sources/GameSaver/: CMakeLists.txt  FileHandler.cpp  GameSaver.cpp
SeaBattleGame/sources/Participant/: Bot.cpp  CMakeLists.txt  Participant.cpp  Player.cpp
